# EduVise

./: README.md
QuizNinja-main/: main.py  pyproject.toml
QuizNinja-main/static/css/: style.css
QuizNinja-main/static/js/: quiz.js
QuizNinja-main/templates/: base.html  feedback.html  generate.html  index.html  quiz.html
ai/: app.py
ai/models/: recommendation_model.py
ai/routes/: api.py
ai/static/: style.css
ai/templates/: index.html
