[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "groq>=0.18.0",
    "gunicorn>=23.0.0",
    "langchain>=0.3.19",
    "langchain-groq>=0.2.4",
    "psycopg2-binary>=2.9.10",
]
